--- a/iFigs.html
+++ b/iFigs.html
@@ -108,12 +108,12 @@ code {
   
   <p>\begin{figure}[hb]<br>
 \begin{center}<br>
-\begin{tabular}{c c}<br>
-\hspace{-10pt}</p>
+\begin{tabular}{c c}</p>
+<p1>\hspace{-10pt}</p1><br>
 <p1>\begin{minipage}{.50\linewidth}</p1><br>
 <p1>\begin{tikzpicture}</p1><br>
 <p2>\begin{axis}[</p2><br>
-<p3> width=\textwidth,<br></p3>
+            <p3> width=\textwidth,<br></p3>
             <p3>ylabel = \footnotesize \texttt{Density},</p3><br>
             <p3>ylabel style = {yshift=-0.1cm},</p3><br>
             <p3>xlabel = \footnotesize \texttt{(a) MSS (bytes)},</p3><br>
@@ -129,22 +129,22 @@ code {
 <p1>\end{minipage}</p1><br>
 <p>&</p><br>
 
-    \hspace{-20pt}
-    \begin{minipage}{.50\linewidth}
-    \begin{tikzpicture}
-        \begin{axis}[
-            width=\textwidth,
-            ylabel = \footnotesize \texttt{Density},
-            ylabel style = {yshift=-0.1cm},
-            xlabel = \footnotesize \texttt{(b) RTT (ms)},
-            xlabel style = {yshift=0.1cm},
-            ymin=0,
-            ticklabel style = {font=\scriptsize},
-            ytick ={0,1e-3,2e-3},
-        ]
-        \addplot[ybar,bar width=185,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/RTT_histogram.txt};
-        \addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/RTT_kde.txt};
-        \end{axis}
+<p1>\hspace{-20pt}</p1><br>
+<p1>\begin{minipage}{.50\linewidth}</p1><br>
+<p1>\begin{tikzpicture}</p1><br>
+<p2>\begin{axis}[</p2><br>
+            <p3>width=\textwidth,</p3><br>
+            <p3>ylabel = \footnotesize \texttt{Density},</p3><br>
+            <p3>ylabel style = {yshift=-0.1cm},</p3><br>
+            <p3>xlabel = \footnotesize \texttt{(b) RTT (ms)},</p3><br>
+            <p3>xlabel style = {yshift=0.1cm},</p3><br>
+            <p3>ymin=0,</p3><br>
+            <p3>ticklabel style = {font=\scriptsize},</p3><br>
+            <p3>ytick ={0,1e-3,2e-3},</p3><br>
+        <p2>]</p2><br>
+        <p2>\addplot[ybar,bar width=185,fill=white!20,opacity=0.5] table[x ={y},y = x]{FigData/RTT_histogram.txt};</p2><br>
+        <p2>\addplot[smooth, thick, line width=1.00pt] table[x ={x},y = y]{FigData/RTT_kde.txt};</p2><br>
+        <p2>\end{axis}</p2><br>
     \end{tikzpicture}
 \end{minipage}
 \end{tabular}
