--- a/iFigs.html
+++ b/iFigs.html
@@ -102,6 +102,8 @@ code {
 </center>
 
 <h3> LaTeX code </h3>
+<li> To reproduce this figure, the txt files can be downloaded from <a href="data/MSS_histogram.txt">MSS_histogram</a>, <a href="data/MSS_kde.txt">MSS_kde</a> <a href="data/RTT_histogram.txt">RTT_histogram</a>, <a href="data/RTT_kde.txt">RTT_kde</a> </li>
+
 <ul class="nav">
   <p> \documentclass{article}<br>
   \usepackage{graphicx}<br>
@@ -161,32 +163,6 @@ code {
   <p>\end{document}<br>
 </ul>
 
-<!--	<div class="row">-->
-<!--	<div class="column left">-->
-<!--  	</div>-->
-<!--	<div class="column middle">-->
-<!--			<center>-->
-<!--			<div>-->
-<!--				<h1>Juan Marcos Ramírez Rondón</h1>-->
-<!--			</div>-->
-<!--			</center>-->
-<!--			-->
-<!--			<img src="JuanRamirezPhoto.jpeg" alt="J. M. Ramirez" width="256" height="256">-->
-
-<!--				<h2> Short Bio </h2>-->
-<!--				<p ALIGN="justify"> I received my degree in electrical engineering at the Universidad de Los Andes (<a href="http://www.ula.ve/">ULA</a>), Venezuela, in 2002. I also received an M.S. in biomedical engineering and a doctor’s degree in applied sciences at ULA, in 2007 and 2017, respectively. From 2004 to 2019, I worked as a teaching and research staff of the Electrical Engineering Department at ULA. Under the supervision of Prof. José Luis Paredes, my Ph.D. thesis focused on developing robust signal processing techniques based on estimation theory. My work was accepted in three (3) peer-reviewed journals, all as the first author. Then, I completed two postdoctoral stays at the <a href="http://hdspgroup.com/"> High Dimensional Signal Processing (HDSP)</a> Group at the University Industrial de Santander, Colombia, between 2017 and 2019. The HDSP group is known as one of the most competitive research centers in Latin America in signal and image processing. I worked under the supervision of Prof. Henry Arguello on the development of signal processing techniques for applications such as feature fusion for spectral image classification, subsampling strategies for seismic image acquisition, and robust sparse channel estimation. Afterward, I did a two-year stay as a Marie Curie Sklodowska Actions (MSCA) postdoctoral fellow at the Hardware-Software Design (GDHwSw) Research Group of the <a href="https://www.urjc.es/"> Universidad Rey Juan Carlos </a>, Spain, sponsored by the GOT ENERGY TALENT and funded by the European Union Horizon 2020 program. During this stay, my research focused on the development of a compressive sensing reconstruction algorithm based on the algorithm unrolling approach using deep learning networks. Currently, I am a postdoctoral researcher at the <a href="https://networks.imdea.org/"> Institute IMDEA Networks,</a> Spain. Specifically, my work focuses on implementing machine learning-based methodologies for anomaly detection and classification in mobile networks. Our work received the Mario Gerla best paper award at the 20th Mediterranean Communication and Computer Networking Conference (MedComNet 2022). Finally, my research work generated around 10 peer-reviewed publications in high-impact journals in signal processing and remote sensing areas including IEEE Transactions on Signal Processing, IEEE Transactions on Image Processing, Signal Processing (Elsevier), and IEEE Transactions on Geoscience and Remote Sensing.-->
-<!--				<h2> Research interest </h2>-->
-<!--				<ul>-->
-<!--					<li> Spectral Image Classification from Compressive Measurements </li>-->
-<!--					<li> Multi-shot Seismic Wavefield Recovery </li>	-->
-<!--					<li> Robust Sparse Signal Reconstruction Algorithms </li>-->
-<!--					<li> Robust Filtering </li>-->
-<!--					<li> Image Denoising and Image Inpainting </li>		-->
-<!--				</ul>-->
-<!--	</div>-->
-<!--	<div class="column right">-->
-<!--  	</div>-->
-<!--	</div>-->
 		
 
 	</body>
